--- a/spec/spans.yml
+++ b/spec/spans.yml
@@ -109,6 +109,32 @@ groups:
         requirement_level:
           conditionally_required: If using persisted operations.
 
+  - id: span.graphql.server.operation.planning
+    type: span
+    stability: development
+    span_kind: internal
+    brief: >
+      This span represents the time spent planning the execution of a GraphQL operation.
+    note: |
+      **Span name** SHOULD be `GraphQL Operation Planning`.
+
+      This span covers the operation planning phase of GraphQL request processing,
+      where the server analyzes the validated query and creates an execution plan.
+      This phase is common in federated GraphQL systems where queries need to be
+      planned across multiple subgraphs, and in advanced GraphQL servers that
+      perform query optimization and planning.
+
+      Planning typically involves determining execution order, identifying required
+      data sources, optimizing data fetching strategies, and preparing the execution
+      context.
+    attributes:
+      - ref: graphql.operation.type
+        requirement_level: required
+      - ref: graphql.operation.name
+        requirement_level: recommended
+      - ref: graphql.operation.hash
+        requirement_level: recommended
+
   - id: span.graphql.server.operation.execution
     type: span
     stability: development
