--- a/spec/spans.yml
+++ b/spec/spans.yml
@@ -1,10 +1,10 @@
 groups:
-  - id: span.graphql.server.operation
+  - id: span.graphql.server.request
     type: span
     stability: development
     span_kind: server
     brief: >
-      This span represents an incoming GraphQL operation on a server implementation.
+      This span represents an incoming GraphQL request on a server implementation.
     note: |
       **Span name** SHOULD be of the format `{graphql.operation.type}` provided
       `graphql.operation.type` is available. If `graphql.operation.type` is not available,
@@ -28,17 +28,16 @@ groups:
       > This prevents potential security issues and ensures span names remain meaningful.
     attributes:
       - ref: graphql.operation.type
-        requirement_level: required
+        requirement_level:
+          conditionally_required: If parsing succeeded
       - ref: graphql.operation.name
         requirement_level:
           conditionally_required: If available and not empty.
-      - ref: graphql.operation.hash
+      - ref: graphql.document.hash
         requirement_level: recommended
-      - ref: graphql.operation.id
+      - ref: graphql.document.id
         requirement_level:
           conditionally_required: If using persisted operations.
-      - ref: user_agent.original
-        requirement_level: recommended
 
   - id: span.graphql.server.document.parsing
     type: span
@@ -53,13 +52,14 @@ groups:
       where the document string is parsed into an abstract syntax tree (AST).
     attributes:
       - ref: graphql.operation.type
-        requirement_level: required
+        requirement_level:
+          conditionally_required: If parsing succeeded
       - ref: graphql.operation.name
         requirement_level:
           conditionally_required: If available and not empty.
-      - ref: graphql.operation.hash
+      - ref: graphql.document.hash
         requirement_level: recommended
-      - ref: graphql.operation.id
+      - ref: graphql.document.id
         requirement_level:
           conditionally_required: If using persisted operations.
 
@@ -80,9 +80,9 @@ groups:
       - ref: graphql.operation.name
         requirement_level:
           conditionally_required: If available and not empty.
-      - ref: graphql.operation.hash
+      - ref: graphql.document.hash
         requirement_level: recommended
-      - ref: graphql.operation.id
+      - ref: graphql.document.id
         requirement_level:
           conditionally_required: If using persisted operations.
 
@@ -103,9 +103,9 @@ groups:
       - ref: graphql.operation.name
         requirement_level:
           conditionally_required: If available and not empty.
-      - ref: graphql.operation.hash
+      - ref: graphql.document.hash
         requirement_level: recommended
-      - ref: graphql.operation.id
+      - ref: graphql.document.id
         requirement_level:
           conditionally_required: If using persisted operations.
 
@@ -125,8 +125,11 @@ groups:
         requirement_level: required
       - ref: graphql.operation.name
         requirement_level: recommended
-      - ref: graphql.operation.hash
+      - ref: graphql.document.hash
         requirement_level: recommended
+      - ref: graphql.document.id
+        requirement_level:
+          conditionally_required: If using persisted operations.
 
   - id: span.graphql.server.field.execution
     type: span
