--- a/spec/events.yaml
+++ b/spec/events.yaml
@@ -24,3 +24,6 @@ groups:
           conditionally_required: Must be included when the error can be associated with a particular field in the GraphQL result.
       - ref: graphql.error.extensions.code
         requirement_level: opt_in
+      - ref: graphql.error.schema_coordinate
+        requirement_level:
+          conditionally_required: Should be included when the error can be associated with a particular field in the GraphQL schema.
