--- a/spec/events.yaml
+++ b/spec/events.yaml
@@ -22,7 +22,7 @@ groups:
       - ref: graphql.error.path
         requirement_level:
           conditionally_required: Must be included when the error can be associated with a particular field in the GraphQL result.
-      - ref: graphql.error.extensions.code
+      - ref: graphql.error.code
         requirement_level: opt_in
       - ref: graphql.error.schema_coordinate
         requirement_level:
