--- a/spec/registry.yaml
+++ b/spec/registry.yaml
@@ -141,25 +141,24 @@ groups:
             requirement_level: required
 
       - id: graphql.error.path
-        type: string[]
+        type: string
         stability: development
         brief: >
           The path of the response field which experienced the error.
         examples:
-          ['["user", 1, "nonExistentField"]', '["query", "findBookById"]']
+          ["user.friends[0].name", "findBookById"]
         note: >
           If an error can be associated to a particular field in the GraphQL result, it must contain
           an entry with the key path that details the path of the response field which experienced
-          the error. 
+          the error.
 
           This allows clients to identify whether a null result is intentional or caused by a
           runtime error.
 
-          This field should be a list of path segments starting at the root of the response and
-          ending with the field associated with the error. Path segments that represent fields
-          should be strings, and path segments that represent list indices should be 0-indexed
-          integers. If the error happens in an aliased field, the path to the error should use the
-          aliased name, since it represents a path in the response, not in the request.
+          The path starts from the root of the response. Field names are separated by
+          dots and list indices are represented using bracket notation. If the error
+          happens in an aliased field, the path should use the aliased name, since it
+          represents a path in the response, not in the request.
 
       - id: graphql.error.code
         type: string
