--- a/spec/registry.yaml
+++ b/spec/registry.yaml
@@ -88,6 +88,99 @@ groups:
         note: >
           The coordinate follows the format "{ParentType}.{fieldName}" and uniquely
           identifies the field within the GraphQL schema.
+
+  - id: registry.graphql.error
+    type: attribute_group
+    display_name: GraphQL Error Attributes
+    brief: >
+      This document defines the shared attributes used to
+      report GraphQL errors associated with a span or event.
+    attributes:
+      - id: graphql.error.message
+        type: string
+        stability: development
+        brief: >
+          The error message intended for the developer as a guide to understand and correct the
+          error.
+        examples:
+          [
+            "Cannot query field 'nonExistentField' on type 'User'",
+            "Variable '$id' of required type 'ID!' was not provided.",
+          ]
+        note: >
+          Every error must contain an entry with the key message with a string description of the
+          error intended for the developer as a guide to understand and correct the error.
+
+      - id: graphql.error.locations
+        type: map[]
+        stability: development
+        brief: >
+          The locations in the GraphQL document associated with the error.
+        examples: [["3:7", "5:4"]]
+        note: >
+          If an error can be associated to a particular point in the requested GraphQL document, it
+          should contain an entry with the key locations with a list of locations, where each
+          location is a map with the keys line and column, both positive numbers starting from 1
+          which describe the beginning of an associated syntax element.
+
+          This should be serialized as a JSON string array.
+        fields:
+          - id: line
+            type: int
+            stability: development
+            brief: >
+              The line number of the location in the GraphQL document.
+            examples: [3]
+            requirement_level: required
+          - id: column
+            type: int
+            stability: development
+            brief: >
+              The column number of the location in the GraphQL document.
+            examples: [7]
+            requirement_level: required
+
+      - id: graphql.error.path
+        type: string
+        stability: development
+        brief: >
+          The path of the response field which experienced the error.
+        examples:
+          ["user.friends[0].name", "findBookById"]
+        note: >
+          If an error can be associated to a particular field in the GraphQL result, it must contain
+          an entry with the key path that details the path of the response field which experienced
+          the error.
+
+          This allows clients to identify whether a null result is intentional or caused by a
+          runtime error.
+
+          The path starts from the root of the response. Field names are separated by
+          dots and list indices are represented using bracket notation. If the error
+          happens in an aliased field, the path should use the aliased name, since it
+          represents a path in the response, not in the request.
+
+      - id: graphql.error.code
+        type: string
+        stability: development
+        brief: >
+          An optional error code from the extensions field.
+        examples: ["GRAPHQL_VALIDATION_FAILED", "UNAUTHENTICATED", "HC00116"]
+        note: >
+          This is an optional field that can be used to categorize errors. The error extension code
+          is a recommended way to categorize errors for easier filtering and monitoring.
+
+      - id: graphql.error.schema_coordinate
+        type: string
+        stability: development
+        brief: >
+          The coordinate of the field in the schema which experienced the error.
+        examples: ["User.friends", "Query.me"]
+        note: >
+          If an error can be associated to a particular field in the GraphQL schema, it must
+          contain a schema coordinate in the form of `typeName.fieldName` identifying the field
+          which experienced the error.
+
       - id: graphql.operation.step.id
         brief: "The id of the step in the execution plan."
         type: string
